Bone Group Custom color set is not respected when creating an Action. #31976

Closed
opened 2012-06-30 21:46:46 +02:00 by Mario Mey · 5 comments

%%%Open the file.
Note the bone group custom-color-set, they are all green.
Move the bone, create a keyframe.
Look at the Action Panel, the channel was created in RED.
In Outliner, Datablocks, go to Actions, "Action", Groups, "Bone": the Color Set is "Custom Color Set".
Now, if you click in Colors, it has new color set (light blue, red, green).

What should it do? To respect the original bone group Custom Color Set (in this case, all green).

What I report is a bug. But now, I ask... Why can the Bone Datablock have its own Color Set? Does it has any use? Shouldn't it respect the one I chose from Properties?

Blender 2.63.11, r48456%%%

%%%Open the file. Note the bone group custom-color-set, they are all green. Move the bone, create a keyframe. Look at the Action Panel, the channel was created in RED. In Outliner, Datablocks, go to Actions, "Action", Groups, "Bone": the Color Set is "Custom Color Set". Now, if you click in Colors, it has new color set (light blue, red, green). What should it do? To respect the original bone group Custom Color Set (in this case, all green). What I report is a bug. But now, I ask... Why can the Bone Datablock have its own Color Set? Does it has any use? Shouldn't it respect the one I chose from Properties? Blender 2.63.11, r48456%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Confirmed.

Custom color sets aren't getting copied over when creating the fcurve groups.%%%

%%%Confirmed. Custom color sets aren't getting copied over when creating the fcurve groups.%%%
Member

%%%Fixed in svn.%%%

%%%Fixed in svn.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Personal color set (17-Theme Color Set) is respected sometimes when opening a file. But, if I change to another color set, when back to mine, its colors turn to black.

Open the file. Change to another color set. Go back to 17... they are black.

(in another file of mine, the personal color set appear black at opening the file)%%%

%%%Personal color set (17-Theme Color Set) is respected sometimes when opening a file. But, if I change to another color set, when back to mine, its colors turn to black. Open the file. Change to another color set. Go back to 17... they are black. (in another file of mine, the personal color set appear black at opening the file)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31976
No description provided.