Bugfix [#31976] Bone Group Custom color set is not respected when creating an Action

Custom color set colors were not getting copied over when creating new action
groups. Instead, a "default set" was initialised for use instead.